hphp/hack/test/typecheck/new_inference/transitive_error2.php.like_types.exp
File "transitive_error2.php", line 31, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error2.php", line 16, characters 19-19:
Some type constraint(s) are violated here
File "transitive_error2.php", line 16, characters 19-19:
T is a constrained type parameter
File "transitive_error2.php", line 22, characters 18-18:
Expected B
File "transitive_error2.php", line 16, characters 19-19:
But got dynamic
File "transitive_error2.php", line 34, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error2.php", line 16, characters 19-19:
Some type constraint(s) are violated here
File "transitive_error2.php", line 16, characters 19-19:
T is a constrained type parameter
File "transitive_error2.php", line 20, characters 18-18:
Expected D
File "transitive_error2.php", line 16, characters 19-19:
But got dynamic
